--- a/src/estilos.css
+++ b/src/estilos.css
@@ -4,10 +4,10 @@ body{
 }
 h2{
    font-family:Verdana, Geneva, Tahoma, sans-serif;
-   color:rgb(1, 1, 145);     
+   color:rgb(4, 4, 199);     
 }
 h3{
-    color: rgb(151, 6, 6);
+    color: rgb(219, 10, 10);
     margin: 10px;
     font-weight: bold;
     font-size: x-large;
@@ -26,15 +26,13 @@ h3{
     align-items: center;
 }
 .tabla{
-    font-size: x-large;
-    display: flex;
+    font-size:medium;   
+    display:flex;
     justify-content:center;
-    border-bottom: 2px solid rgb(48, 97, 80);
-    box-shadow: 5px 4px gray;   
-    background-color: darkturquoise; 
+    box-shadow: 5px 5px gray;   
+    background-color: darkturquoise;
+    
 }
-.
-
 
 .button {
     border: 1px;
