--- a/src/styles/estilos.css
+++ b/src/styles/estilos.css
@@ -50,7 +50,7 @@ h1{
     font-size: 35px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: ghostwhite ;
-    ;
+    
     margin-bottom: 30px;
 }
 h2{
@@ -91,4 +91,15 @@ button{
     color:ivory;
     font-size: 22px;
     
+}
+
+.formProducto {
+    width: 450px;
+    margin: auto;
+    background: #ff793f;
+    padding: 10px 20px;
+    box-sizing: border-box;
+    margin-top: 20px;
+    border-radius: 7px;
+    font: bold 20px sans-serif;
 }
